tests/snapshots/run_wpt_conformance__trtx_reduceMean_float32_5D_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "reduce_mean.https.any.js",
    "reduceMean float32 5D tensor default options",
    "trtx",
    "PASS",
)
